update scroll deployment scripts, update IRNGesusReloaded interface

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "RNGesus is back bitches",
   "scripts": {
-    "deploy:scrolltestnet": "yarn hardhat --network scrollSepolia run scripts/deploy.ts",
+    "deploy:scrolltestnet": "yarn hardhat --network scrollSepolia run scripts/deployScroll.ts",
     "deploy:sepolia": "yarn hardhat --network sepolia run scripts/deploy.ts",
     "test": "yarn hardhat --network hardhat test",
     "coverage": "yarn hardhat --network hardhat coverage"
