update drand testnet info, use hh ignition

--- a/package.json
+++ b/package.json
@@ -3,9 +3,7 @@
   "version": "1.0.0",
   "description": "Permissionless verifiable randomness on any EVM",
   "scripts": {
-    "deploy:scrolltestnet": "yarn hardhat --network scrollSepolia run scripts/deployScroll.ts",
-    "deploy:sepolia": "yarn hardhat --network sepolia run scripts/deploy.ts",
-    "deploy:base": "yarn hardhat --network base run scripts/deployBase.ts",
+    "deploy:base": "yarn hardhat ignition deploy ignition/modules/AnyrandOptimismConsumer.ts --network base --verify",
     "test": "yarn hardhat --network hardhat test",
     "coverage": "yarn hardhat --network hardhat coverage"
   },
@@ -14,18 +12,21 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.5",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
-    "@nomicfoundation/hardhat-verify": "^1.1.1",
+    "@nomicfoundation/hardhat-verify": "^2.0.5",
+    "@nomicfoundation/ignition-core": "^0.15.0",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.3.6",
     "@types/mocha": "^10.0.1",
     "chai": "^4.2.0",
     "dotenv": "^16.3.1",
-    "ethers": "^6.9.0",
-    "hardhat": "^2.17.2",
+    "ethers": "^6.11.1",
+    "hardhat": "^2.22.1",
     "hardhat-abi-exporter": "^2.10.1",
     "hardhat-contract-sizer": "^2.10.0",
     "hardhat-gas-reporter": "^1.0.9",
