add degen deployment

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Permissionless verifiable randomness on any EVM",
   "scripts": {
     "deploy:base:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network base --verify",
+    "deploy:degen:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network degen --parameters ignition/config/degen.json --verify",
     "test": "yarn hardhat --network hardhat test",
     "coverage": "yarn hardhat --network hardhat coverage"
   },
