--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Permissionless verifiable randomness on any EVM",
   "scripts": {
+    "deploy:base": "yarn hardhat ignition deploy ignition/modules/AnyrandOptimism.ts --network base --verify",
     "deploy:base:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network base --verify",
     "deploy:degen:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network degen --parameters ignition/config/degen.json --verify",
     "deploy:gnosis:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network gnosis --parameters ignition/config/gnosis.json --verify",
