use noble-curves in tests

--- a/package.json
+++ b/package.json
@@ -14,7 +14,13 @@
     "test": "yarn hardhat --network hardhat test",
     "coverage": "yarn hardhat --network hardhat coverage"
   },
-  "keywords": ["solidity", "vrf", "drand", "bls", "bn254"],
+  "keywords": [
+    "solidity",
+    "vrf",
+    "drand",
+    "bls",
+    "bn254"
+  ],
   "author": "Kevin Charm <k@fairy.dev>",
   "license": "UNLICENSED",
   "devDependencies": {
@@ -39,7 +45,6 @@
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-storage-layout": "^0.1.7",
     "hardhat-storage-layout-changes": "^0.1.2",
-    "mcl-wasm": "^1.4.0",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.1",
@@ -49,6 +54,8 @@
   },
   "dependencies": {
     "@kevincharm/bls-bn254": "^2.0.0",
+    "@kevincharm/noble-bn254-drand": "^0.0.1",
+    "@noble/curves": "^1.6.0",
     "@openzeppelin/contracts": "^5.0.0",
     "@openzeppelin/contracts-upgradeable": "^5.0.0",
     "@scroll-tech/contracts": "^0.1.0",
