--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "solidity-coverage": "^0.8.1",
     "ts-node": "^10.9.1",
     "typechain": "^8.3.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.23.8"
   },
   "dependencies": {
     "@kevincharm/bls-bn254": "^2.0.0",
