--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "Permissionless verifiable randomness on any EVM",
   "scripts": {
+    "deploy:scrollSepolia": "yarn hardhat run scripts/deployAnyrandScroll.ts --network scrollSepolia",
     "deploy:scroll": "yarn hardhat ignition deploy ignition/modules/AnyrandScroll.ts --network scroll --verify",
-    "deploy:scrollSepolia": "yarn hardhat ignition deploy ignition/modules/AnyrandScroll.ts --network scrollSepolia --verify",
     "deploy:base": "yarn hardhat ignition deploy ignition/modules/AnyrandOptimism.ts --network base --verify",
     "deploy:base:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network base --verify",
     "deploy:degen:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network degen --parameters ignition/config/degen.json --verify",
@@ -14,24 +14,18 @@
     "test": "yarn hardhat --network hardhat test",
     "coverage": "yarn hardhat --network hardhat coverage"
   },
-  "keywords": [
-    "solidity",
-    "vrf",
-    "drand",
-    "bls",
-    "bn254"
-  ],
+  "keywords": ["solidity", "vrf", "drand", "bls", "bn254"],
   "author": "Kevin Charm <kevin@frogworks.io>",
   "license": "UNLICENSED",
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
     "@nomicfoundation/hardhat-ethers": "^3.0.5",
-    "@nomicfoundation/hardhat-ignition": "^0.15.4",
-    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.4",
+    "@nomicfoundation/hardhat-ignition": "^0.15.6",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.6",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
     "@nomicfoundation/hardhat-toolbox": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.7",
-    "@nomicfoundation/ignition-core": "^0.15.4",
+    "@nomicfoundation/ignition-core": "^0.15.6",
     "@typechain/ethers-v6": "^0.5.0",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.3.6",
