--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "calc-optimism-gas": "yarn hardhat --network scrollSepolia run scripts/gas.ts",
     "build": "yarn hardhat compile",
     "test": "yarn hardhat --network hardhat test",
-    "coverage": "yarn hardhat --network hardhat coverage"
+    "coverage": "yarn hardhat --network hardhat coverage",
+    "fuzz": "echidna . --contract FuzzAnyrand --config echidna.config.yaml"
   },
   "keywords": ["solidity", "vrf", "drand", "bls", "bn254"],
   "author": "Kevin Charm <kevin@frogworks.io>",
