separate out network configs

--- a/package.json
+++ b/package.json
@@ -5,13 +5,7 @@
   "scripts": {
     "gwei": "yarn hardhat run scripts/gwei.ts",
     "request": "yarn hardhat run scripts/request.ts",
-    "deploy:scrollSepolia": "yarn hardhat run scripts/deployAnyrandScroll.ts --network scrollSepolia",
-    "deploy:scroll": "yarn hardhat ignition deploy ignition/modules/AnyrandScroll.ts --network scroll --verify",
-    "deploy:base": "yarn hardhat ignition deploy ignition/modules/AnyrandOptimism.ts --network base --verify",
-    "deploy:base:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network base --verify",
-    "deploy:degen:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network degen --parameters ignition/config/degen.json --verify",
-    "deploy:gnosis:fixedfee": "yarn hardhat ignition deploy ignition/modules/AnyrandFixedFee.ts --network gnosis --parameters ignition/config/gnosis.json --verify",
-    "calc-optimism-gas": "yarn hardhat --network scrollSepolia run scripts/gas.ts",
+    "deploy:scrollSepolia": "yarn hardhat --config hardhat.config.scrollSepolia.ts --network scrollSepolia run scripts/deployAnyrandScroll.ts",
     "format:check": "yarn prettier --check .",
     "format": "yarn prettier --write .",
     "build": "yarn hardhat compile",
