add new scroll sepolia deployment

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 SCROLL_SEPOLIA_URL="https://sepolia-rpc.scroll.io"
 SCROLL_URL="https://rpc.scroll.io"
 BASE_URL="https://mainnet.base.org"
-MAINNET_PK="deployer private key"
+ANYRAND_DEPLOYER_PK="deployer private key"
