--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "gwei": "yarn hardhat run scripts/gwei.ts",
     "request": "yarn hardhat run scripts/request.ts",
     "deploy:scrollSepolia": "yarn hardhat --config hardhat.config.scrollSepolia.ts --network scrollSepolia run scripts/deployAnyrandScrollSepolia.ts",
+    "deploy:scroll": "yarn hardhat --config hardhat.config.scroll.ts --network scroll run scripts/deployAnyrandScroll.ts",
     "format:check": "yarn prettier --check .",
     "format": "yarn prettier --write .",
     "build": "yarn hardhat compile",
     "test": "yarn hardhat --network hardhat test",
     "coverage": "yarn hardhat --network hardhat coverage"
   },
-  "keywords": ["solidity", "vrf", "drand", "bls", "bn254"],
+  "keywords": [
+    "solidity",
+    "vrf",
+    "drand",
+    "bls",
+    "bn254"
+  ],
   "author": "Kevin Charm <kevin@frogworks.io>",
   "license": "UNLICENSED",
   "devDependencies": {
