--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "format": "yarn prettier --write .",
     "build": "yarn hardhat compile",
     "test": "yarn hardhat --network hardhat test",
-    "coverage": "yarn hardhat --network hardhat coverage"
+    "coverage": "yarn hardhat --network hardhat coverage",
+    "postinstall": "yarn patch-package"
   },
   "keywords": [
     "solidity",
@@ -44,6 +45,7 @@
     "hardhat-gas-reporter": "^1.0.9",
     "hardhat-storage-layout": "^0.1.7",
     "hardhat-storage-layout-changes": "^0.1.2",
+    "patch-package": "^8.0.0",
     "prettier": "^3.0.3",
     "prettier-plugin-solidity": "^1.1.3",
     "solidity-coverage": "^0.8.1",
