add base deployment

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 SCROLL_SEPOLIA_URL="https://sepolia-rpc.scroll.io"
 SCROLL_URL="https://rpc.scroll.io"
 BASE_URL="https://mainnet.base.org"
-ANYRAND_DEPLOYER_PK="deployer private key"
+ANYRAND_SCROLL_DEPLOYER_PK="deployer private key"
+ANYRAND_BASE_DEPLOYER_PK="deployer private key"
