add deployment script for local/hh node, update ignition-core patch

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,8 @@ yarn-error.log
 cache
 artifacts
 !ignition/**/*
+# Don't commit local deployments
+ignition/deployments/chain-31337-*
 
 # Noir
 circuits/proofs/
