--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "deploy:scrollSepolia": "yarn hardhat --config hardhat.config.scrollSepolia.ts --network scrollSepolia run scripts/deployAnyrandScrollSepolia.ts",
     "deploy:scroll": "yarn hardhat --config hardhat.config.scroll.ts --network scroll run scripts/deployAnyrandScroll.ts",
     "deploy:base": "yarn hardhat --config hardhat.config.base.ts --network base run scripts/deployAnyrandBase.ts",
+    "deploy:local": "yarn hardhat --network localhost run scripts/deployAnyrandLocal.ts",
     "format:check": "yarn prettier --check .",
     "format": "yarn prettier --write .",
     "build": "yarn hardhat compile",
